--- a/style.css
+++ b/style.css
@@ -18,3 +18,18 @@ fieldset {
   padding: 2px;
   border-color: black;
 }
+
+/* .container {
+  position: relative;
+}
+ */
+
+#overlay {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-family: monospace;
+  padding: 1em;
+}
